=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.017 - Under Development

=over

=item *

Added the C<--skip> option to C<krang_import> which exposes the
existing Krang::DataSet::import_all() C<skip_classes> option from the
command-line.

=item *

Removed "Delete Checked" button from List Admin screen.  Lists cannot
be deleted. [Sam]

=item *

Added Krang::Story->preview_version(), Krang::Media->preview_version
and Krang::ElementClass::TopLevel->force_republish() in anticipation
of forthcoming improvements to the publishing system. [Peter]


=item *

Upgraded XML::Validator::Schema to the latest release, 1.06. [Sam]

=item *

Fixed Krang::Story->preview_path() to use the submitted category
argument.  This was keeping preview from writing out content to
multiple sites. [Peter]

=item *

Added password-length check to My Preferences, enforcing the
6-character minimum length on passwords that exists everywhere else in
the UI.  [Peter]

=item *

Fixed error reporting in the publish process - error messages are
displayed in a more user-friendly fashion.[Peter]

=item *

Fixed Krang::ElementClass->publish() to trap errors thrown by
HTML::Template::Expr->output(), and fixed Krang::CGI::Publisher to
properly report errors and not try to redirect users when failures
occur in preview.  [Peter]

=item *

Fixed krang_ftpd to setup higher file and memory limits.  These limits
were preventing the FTP server from operating on some systems. [Sam]

=back

=head2 v1.016 - April 20, 2004

=over

=item *

Fixed Krang::DB to always turn on mysql_auto_reconnect (it was already
on by default under mod_perl).  This should prevent the schedule
daemon from periodically dying when a database connections times out.
[Sam]

=item *

Fixed bug in Krang::ElementClass which would fail to setup
"is_$element" template vars if "$element" wasn't used as a template
var itself. [Matt]

=item *
